--- a/01-docker-build-and-push-to-acr.yml
+++ b/01-docker-build-and-push-to-acr.yml
@@ -29,11 +29,25 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Login to container registry
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
+        command: login
         containerRegistry: $(dockerRegistryServiceConnection)
+
+    - task: Docker@2
+      displayName: Build Docker image
+      inputs:
+        command: build
+        dockerfile: $(dockerfilePath)
+        repository: $(imageRepository)
         tags: |
           $(tag)
+
+    - task: Docker@2
+      displayName: Push Docker image
+      inputs:
+        command: push
+        repository: $(imageRepository)
+        tags: |
+          $(tag)
+
