--- a/01-docker-build-and-push-to-acr.yml
+++ b/01-docker-build-and-push-to-acr.yml
@@ -16,9 +16,6 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile.txt'
   tag: '$(Build.BuildId)'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
 stages:
 - stage: Build
   displayName: Build and push stage
@@ -26,7 +23,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: $(vmImageName)
+      name: 'Default' # Replace 'Default' with your self-hosted agent pool name
     steps:
     - task: Docker@2
       displayName: Login to container registry
@@ -50,4 +47,3 @@ stages:
         repository: $(imageRepository)
         tags: |
           $(tag)
-
