--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,28 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+name: Docker Build and Push
 
-trigger:
-- main
+on:
+  push:
+    branches:
+      - main
 
-resources:
-- repo: self
+jobs:
+  build:
+    name: Build and Push Docker Image
+    runs-on: self-hosted  # Use the self-hosted runner
+    labels: [githubrunner] # Specify the runner label
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'c647ea20-9416-4940-ad88-6f8d34911030'
-  imageRepository: 'team13week2'
-  containerRegistry: 'team13acr.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile.txt'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Login to Azure Container Registry
+      run: |
+        echo "${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}" | docker login team13acr.azurecr.io -u ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }} --password-stdin
+
+    - name: Build Docker image
+      run: |
+        docker build -t team13acr.azurecr.io/team13week2:${{ github.run_id }} -f Dockerfile.txt .
+
+    - name: Push Docker image
+      run: |
+        docker push team13acr.azurecr.io/team13week2:${{ github.run_id }}
