--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,32 +1,29 @@
-name: Docker Build and Push
+trigger:
+- main
 
-# Trigger the workflow on pushes to the main branch
-on:
-  push:
-    branches:
-      - main
+pool:
+  vmImage: 'ubuntu-latest'
 
-jobs:
-  build:
-    name: Build and Push Docker Image
-    runs-on: self-hosted  # Use the self-hosted runner
-    labels: [githubrunner]  # Specify the runner label
+variables:
+  ACR_NAME: 'team13acr'
+  IMAGE_NAME: 'team13acrimage'
+  TAG: 'latest'
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.x'
 
-    - name: Log in to Azure Container Registry
-      env:
-        AZURE_USERNAME: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
-        AZURE_PASSWORD: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
-      run: |
-        echo "$AZURE_PASSWORD" | docker login team13acr.azurecr.io -u $AZURE_USERNAME --password-stdin
+- script: |
+    az login --service-principal --username "da2e9824-9e18-4bfa-bb49-1a5fa41f33a2" --password "VCe8Q~IPm~0qzKNSPYdkfL2upDhywEnFGIvvBbyE" --tenant "194208ed-3950-42f3-bc7e-5a986a5c9e55"
+    az acr login --name $(ACR_NAME)
+  displayName: 'Login to Azure'
 
-    - name: Build Docker Image
-      run: |
-        docker build -t team13acr.azurecr.io/team13week2:${{ github.run_number }} -f $(Build.SourcesDirectory)/Dockerfile.txt .
-
-    - name: Push Docker Image
-      run: |
-        docker push team13acr.azurecr.io/team13week2:${{ github.run_number }}
+- task: Docker@2
+  displayName: 'Build and push Docker image'
+  inputs:
+    containerRegistry: '$(ACR_NAME).azurecr.io'
+    repository: '$(IMAGE_NAME)'
+    command: 'buildAndPush'
+    Dockerfile: 'Dockerfile'
+    tags: '$(TAG)'
